# Audio-Visualiser

./: .gitignore  CMakeLists.txt
Audio-Processing/: CMakeLists.txt  Makefile  cmake_install.cmake
Audio-Processing/src/FFT/: SoundProcessing.cpp  SoundProcessing.hpp
Audio-Processing/src/Parse/: AudioFile.h
Audio-Processing/src/Processing/: SoundProcessing.cpp  SoundProcessing.hpp
Visualiser/: CMakeLists.txt  cmake_install.cmake  main.cpp
Visualiser-Graphics/: CMakeLists.txt
Visualiser-Graphics/src/MainGFX/: Graphics.cpp  Graphics.hpp  shader.cpp
